lista 3 ->small code refactor
